Create default picker positions in JSON for AJAX request test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="warehouse-view.css"/>
 	</head>
 	<body>
-		<p>Unable to reach warehouse.</p>
+		<p id='status'>Status: n/a</p>
 		<div id='warehouse-div'></div>
 		<script>
 			// Create warehouse map.
@@ -51,6 +51,31 @@
 					}
 				}
 			}
+
+			// Set initial picker positions.
+			var picker = [];
+			picker[0] = [-1, -1, -1];
+			picker[1] = [-1, -1, -1];
+			picker[2] = [-1, -1, -1];
+			picker[3] = [-1, -1, -1];
+
+			function updatePickerPositions() {
+				var xhttp = new XMLHttpRequest();
+				xhttp.onreadystatechange = function() {
+					if (this.readyState == 4 && this.status == 200) {
+						document.getElementById("status").innerText = "Status: Picker positions received.";
+						setTimeout(updatePickerPositions, 500);
+					} else if (this.readyState == 4 && this.status != 200) {
+						document.getElementById("status").innerText = "Status: Failed to update picker positions.";
+						setTimeout(updatePickerPositions, 500);
+					}
+				}
+				xhttp.open("GET", "warehouse-view.php", true);
+  				xhttp.send();
+			}
+
+			// Kick-start updates.
+			updatePickerPositions();
 		</script>
 	</body>
 </html>
