Make warehouse and view track next order

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="warehouse-view.css"/>
 	</head>
 	<body>
-		<p id='status'>Status: n/a</p>
+		<p id='order'>Processing no order.</p>
 		<div id='warehouse-div'></div>
 		<script src="warehouse-view.js"></script>
 	</body>
