Make bin contents viewable in warehouse viewer
Clicking on a bin now lists the contents and quantities on a table.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 	</head>
 	<body>
 		<p id='order'>Processing no order.</p>
-		<div id='warehouse-div'></div>
+		<div id="layout-div">
+			<div id='warehouse-div'></div>
+			<table id="bin-table">
+				<tr>
+					<th colspan="2" id="table-bin">Bin: ?</th>
+				<tr>
+				<tr>
+					<th>Item</th>
+					<th>Quantity</th>
+				</tr>
+			</table>
+		</div>
 		<script src="warehouse-view.js"></script>
 	</body>
 </html>
