Fix bin table requests
No longer sending new requests before previous XMLHttpRequest finishes.
Made some cosmetic changes to bin table in warehouse view.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div id='warehouse-div'></div>
 			<table id="bin-table">
 				<tr>
-					<th colspan="2" id="table-bin">Bin: ?</th>
+					<th colspan="2" id="table-bin">Bin: 1</th>
 				<tr>
 				<tr>
 					<th>Item</th>
