Apply inital colour scheme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<div id='warehouse-div'></div>
 			<div id="info-div">
 				<div id="order-layout">
-					<p id="order">Processing no order.</p>
+					<p id="order">No orders</p>
 				</div>
 				<div id="table-container">
 					<table id="bin-table">
