Add 'about' panel

--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
 						</tr>
 					</table>
 				</div>
-				<button id="about">About</button>
+				<button id="about" onclick="toggle_hidden_content()">About</button>
+			</div>
+		</div>
+		<div id="hidden-content">
+			<div id="inner-content">
+				<h1>Automated-Order-Picker</h1><br>
+				<h2>Contact</h2><br>
+				<p>
+					<i>Author:</i> Steven Joshua Klickermann<br>
+					<i>Email:</i> sjklickermann@gmail.com<br>
+					<i>GitHub:</i> <a href="https://github.com/sjklick">https://github.com/sjklick</a>
+				</p><br>
+				<h2>License</h2><br>
+				<p>
+					This project is licensed under the terms of the GNU General Public License v3.0.
+					The full project source code and license is available at <a href="https://github.com/sjklick/Automated-Order-Picker">https://github.com/sjklick/Automated-Order-Picker</a>.
+				</p><br>
+				<button onclick="toggle_hidden_content()">Ok</button>
 			</div>
 		</div>
 		<script src="warehouse-view.js"></script>
